complete home page

--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@
               Premium
             </div>
             <div>
-              <img src="./assets/studio.svg" alt="" width="24px" />Youtube
+              <img src="./assets/studio.svg" alt="" width="24px" />
               Youtube Studios
             </div>
             <div>
-              <img src="./assets/ytMusic.svg" alt="" width="24px" />Youtube
+              <img src="./assets/ytMusic.svg" alt="" width="24px" />
               Youtube Music
             </div>
             <div>
-              <img src="./assets/ytKids.svg" alt="" width="24px" />Youtube
+              <img src="./assets/ytKids.svg" alt="" width="24px" />
               Youtube Kids
             </div>
           </div>
