--- a/index.html
+++ b/index.html
@@ -1,179 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YouTube</title>
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <nav class="flex-div">
-        <div class="nav-left flex-div">
-          <i class="fa-solid fa-bars nav-icon" style="color: white"></i>
-          <img src="assets/yt-logo.png" alt="" class="logo" />
-        </div>
-        <div class="nav-middle flex-div">
-          <div class="search-box flex-div">
-            <form action="">
-              <input
-                class="search-input"
-                type="text"
-                placeholder="Search"
-                style="color: rgb(206, 201, 201)"
-              />
-            </form>
-            <div class="search-icon">
-              <i class="fa-solid fa-magnifying-glass" style="color: white"></i>
-            </div>
-          </div>
-          <div class="voice-search">
-            <i class="fas fa-microphone voice-search" style="color: white"></i>
-          </div>
-        </div>
-        <div class="nav-right flex-div">
-          <img src="assets/upload.png" alt="upload" />
-          <img src="assets/notification.png" alt="notification" />
-          <img src="assets/name.jpg" alt="user" class="user-icon" />
-        </div>
-      </nav>
-      <div class="content">
-        <div class="left">
-          <div class="home">
-            <div><img src="./assets/home.svg" alt="" width="24px" />Home</div>
-            <div>
-              <img src="./assets/shorts.svg" alt="" width="24px" />Shorts
-            </div>
-            <div>
-              <img
-                src="./assets/subscription.svg"
-                alt=""
-                width="24px"
-              />Subscription
-            </div>
-          </div>
-          <hr />
-          <div class="you">
-            <div>You &nbsp; &nbsp; ></div>
-            <div>
-              <img src="./assets/yourChannel.svg" alt="" width="24px" />
-              Your Channel
-            </div>
-            <div>
-              <img src="./assets/history.svg" alt="" width="24px" />
-              History
-            </div>
-            <div>
-              <img src="./assets/youVideos.svg" alt="" width="24px" />
-              Your Videos
-            </div>
-            <div>
-              <img src="./assets/watchLater.svg" alt="" width="24px" />
-              Watch Later
-            </div>
-            <div>
-              <img src="./assets/yourClip.svg" alt="" width="24px" />
-              Your Clips
-            </div>
-            <div>
-              <img src="./assets/showMore.svg" alt="" width="24px" />
-              Show more
-            </div>
-          </div>
-          <hr />
-          <div class="subscriptions">
-            <div>
-              <img
-                src="./assets/subscriprion.png"
-                alt=""
-                width="24px"
-              />subscriptions &nbsp; &nbsp; >
-            </div>
-            <div><img src="./assets/" alt="" />NASA</div>
-            <div><img src="./assets/" alt="" />T-Series</div>
-            <div><img src="./assets/" alt="" />Hum Jeetenge</div>
-            <div><img src="./assets/" alt="" />Coding Ninjas</div>
-          </div>
-          <hr />
-          <div class="explore">
-            <div>
-              <img src="./assets/trending.svg" alt="" width="24px" />Trending
-            </div>
-            <div>
-              <img src="./assets/shopping.svg" alt="" width="24px" />Shopping
-            </div>
-            <div>
-              <img src="./assets/music.png" alt="" width="24px" />Musics
-            </div>
-            <div>
-              <img src="./assets/films (1).svg" alt="" width="24px" />Films
-            </div>
-            <div><img src="./assets/live.svg" alt="" width="24px" />Live</div>
-            <div>
-              <img src="./assets/gaming (1).svg" alt="" width="24px" />Gaming
-            </div>
-            <div><img src="./assets/news.png" alt="" width="24px" />News</div>
-            <div>
-              <img src="./assets/sport.svg" alt="" width="24px" />Sports
-            </div>
-            <div>
-              <img src="./assets/courses (1).svg" alt="" width="24px" />Courses
-            </div>
-          </div>
-          <hr />
-          <div class="more">
-            <div>
-              <img src="./assets/youtube.svg" alt="" width="24px" />Youtube
-              Premium
-            </div>
-            <div>
-              <img src="./assets/studio.svg" alt="" width="24px" />
-              Youtube Studios
-            </div>
-            <div>
-              <img src="./assets/ytMusic.svg" alt="" width="24px" />
-              Youtube Music
-            </div>
-            <div>
-              <img src="./assets/ytKids.svg" alt="" width="24px" />
-              Youtube Kids
-            </div>
-          </div>
-          <hr />
-          <div class="settings">
-            <div>
-              <img src="./assets/setting.svg" alt="" width="24px" />setting
-            </div>
-            <div>
-              <img src="./assets/history.svg" alt="" width="24px" />Report
-              history
-            </div>
-            <div><img src="./assets/help.svg" alt="" width="24px" />Help</div>
-            <div>
-              <img src="./assets/feedback (1).svg" alt="" width="24px" />Send
-              Feedback
-            </div>
-          </div>
-          <hr />
-          <div class="leftFooter">
-            <p class="left-footer">
-              About Press Copyright Contact usCreators Advertise Developers
-              TermsPrivacy Policy & Safety How YouTube works Test new features
-            </p>
-          </div>
-        </div>
-        <div class="videos"></div>
-      </div>
-    </div>
 
-    <script type="module" src="script.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Youtube</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1384/1384060.png">
+</head>
+
+<body>
+    <nav>
+        <span id="menuIcon" class="material-icons">
+            menu
+        </span>
+        <img class="logo"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/54/YouTube_dark_logo_2017.svg/1280px-YouTube_dark_logo_2017.svg.png"
+            alt="">
+        <div class="inputDiv">
+            <input id="searchInput" type="text" placeholder="Search">
+            <button class="searchBtn" id="searchButton"><span class="material-icons">
+                    search
+                </span></button>
+        </div>
+        <span class="material-icons">
+            notifications
+        </span>
+    </nav>
+    <div class="black" id="black"></div>
+    <section class="main" >
+        <div class="leftMenu" id="leftMenu">
+            <div class="home">
+                <span class="material-icons">
+                    home
+                </span>
+                <h4>Home</h4>
+            </div>
+            <div>
+                <span class="material-icons">
+                    subscriptions
+                </span>
+                <h4>Subscriptions</h4>
+            </div>
+            <div>
+                <span class="material-icons">
+                    play_circle
+                </span>
+                <h4>Shorts</h4>
+            </div>
+            <div class="line"></div>
+            <div>
+                <span class="material-icons">
+                    person
+                </span>
+                <h4>Your channel</h4>
+            </div>
+            <div>
+                <span class="material-icons">
+                    history
+                </span>
+                <h4>History</h4>
+            </div>
+            <div>
+                <span class="material-icons">
+                    smart_display
+                </span>
+                <h4>Your vidoes</h4>
+            </div>
+            <div>
+                <span class="material-icons">
+                    schedule
+                </span>
+                <h4>Watch later</h4>
+            </div>
+            <div>
+                <span class="material-icons">
+                    content_cut
+                </span>
+                <h4>Clips</h4>
+            </div>
+        </div>
+
+        <div id="videoContainerDiv">
+        </div>
+    </section>
+
+    
+    
+
+    </div>
+    <script src="https://www.youtube.com/iframe_api"></script>
+    <script src="script.js"></script>
+</body>
+
 </html>
